# Stats-APP-V1-ISOLADO

./: .replit  .replitignore  INSTRUCOES.txt  INSTRUCOES_SUPABASE.md  Procfile  README.md  SETUP_DEDUPLICACAO.md  SETUP_SUPABASE.md  alembic.ini  deployment_config.py  gunicorn.conf.py  main.py  pyproject.toml  replit.md  test_patch_verification.py  test_validation_audit.py  wsgi.py
.git.backup.20251007_111238/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config
alembic/: env.py
app/: api_dashboard.py  database_migrations.py  pipeline_orchestrator.py
attached_assets/: 20250803_CLASH(960912718)_real_holdem_no-limit_1758548572525.txt  20250803_CRUNCH(960912708)_real_holdem_no-limit_1761247678788.txt  888.pt20250921 Tournament 9,90 € + 1,10 € 4.000 € Domingo Mystery Bounty 11 (279085703) No Limit Holdem_1761661784446.txt  888poker20250803 Tournament $ 30 + $ 3 $ 2.000 Mystery Bounty 33 (276942207) No Limit Holdem_1758553307506.txt  AUTHENTICATION_1759144564375.md  Eurico9max_1751036885545.csv  HH20250715 T3908028211 No Limit Hold'em �20 + �2_1761247659108.txt  HH20250716 T3908026684 No Limit Hold'em �9.80 + �1.20_1758208476006.txt  HH20250803 SCHEDULEDID-G33737697T48 TN-Early Special - $10,000 GTD GAMETYPE-Hold'em LIMIT-no CUR-REAL OND-F BUYIN-0_1758711468140.txt  Pasted--Vis-o-r-pida-o-que-falta-e-como-fechar-Falta-DerivedPositions-DerivedIP-DerivedStacks-nos--1756903519065_1756903519066.txt  Pasted--timas-not-cias-o-pipeline-correu-mesmo-de-ponta-a-ponta-upload-derive-partitions-stats-sc-1756984606716_1756984606717.txt  (+42 more)
data/: initial_emails.json
parsed/: hands.jsonl  (+2 more)
(+2488 files in other folders)
